2011-05-20  Jason Merrill  <jason@redhat.com>

	PR c++/48945
	* decl.c (revert_static_member_fn): Ignore const on constexpr fn.

	PR c++/48780
	* cvt.c (type_promotes_to): Don't promote scoped enums.

	PR c++/49066
	* decl.c (duplicate_decls): Preserve DECL_DELETED_FN.

	PR c++/48873
	* tree.c (stabilize_expr): Fix typo.

	DR 1073
	PR c++/49082
	* typeck.c (comp_except_specs): noexcept(false) is not compatible
	with throw(type-list).
	* typeck2.c (merge_exception_specifiers): noexcept(false)
	beats any more limited specification.

	PR c++/24163
	PR c++/29131
	* pt.c (tsubst_copy_and_build) [CALL_EXPR]: Avoid repeating
	unqualified lookup.
	* semantics.c (perform_koenig_lookup): Add complain parm.
	* cp-tree.h: Adjust.
	* parser.c (cp_parser_postfix_expression): Adjust.
	(cp_parser_perform_range_for_lookup): Adjust.

2011-05-20  Jason Merrill  <jason@redhat.com>

	* semantics.c (finish_call_expr): SET_EXPR_LOCATION.

2011-05-20  Joseph Myers  <joseph@codesourcery.com>

	* Make-lang.in (GXX_OBJS): Remove intl.o and version.o.

2011-05-19  Jakub Jelinek  <jakub@redhat.com>

	PR c++/49043
	* decl.c (check_omp_return): Stop searching on sk_function_parms.

	PR c++/48869
	* method.c (get_dtor, get_copy_ctor): Add COMPLAIN argument,
	pass it down to locate_fn_flags.
	* cp-tree.h (get_dtor, get_copy_ctor): Adjust prototypes.
	* semantics.c (cxx_omp_create_clause_info): Adjust callers.
	* cp-gimplify.c: Include splay-tree.h.
	(splay_tree_compare_decl_uid, omp_var_to_track,
	omp_cxx_notice_variable): New functions.
	(struct cp_genericize_omp_taskreg): New type.
	(struct cp_genericize_data): Add omp_ctx field.
	(cp_genericize_r): Attempt to determine implicitly determined
	firstprivate class type variables.
	(cp_genericize): Clear omp_ctx.
	* Make-lang.in (cp/cp-gimplify.o): Depend on $(SPLAY_TREE_H).

2011-05-18  Jason Merrill  <jason@redhat.com>

	PR c++/48948
	PR c++/49015
	* class.c (finalize_literal_type_property): Do check